15/11 update data mining

--- a/Group12_KHDL&UD.ipynb
+++ b/Group12_KHDL&UD.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/0Hgw3D/hm0GtQdmXvH/o",
+      "authorship_tag": "ABX9TyOEY9lmOmaPOhfK8rqds/kV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,12 @@
         "id": "FMF7ds6WGgzh"
       },
       "source": [
-        "Sắp xếp dữ liệu theo ngày và thêm vào những này không được thu thập (số lượng khách bằng NaN)\n"
+        "---\n",
+        "* Sắp xếp dữ liệu theo ngày và thêm vào những này không được thu thập (số lượng khách bằng NaN)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -314,7 +319,8 @@
         "id": "hUEoKD_KGxgJ"
       },
       "source": [
-        "Gán cờ cho những ngày không có khách"
+        "---\n",
+        "* Gán cờ cho những ngày không có khách"
       ]
     },
     {
