upload final DataFrame

--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Bản sao của Group12_Notebook.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -27,16 +26,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/pdthuc/Project-Applied_Data_Science/blob/main/Group12_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -103,7 +92,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RS_HDZ2p9FT-",
-        "outputId": "6a7950a5-ae26-4a6e-be2f-5836bcfd8867"
+        "outputId": "4bfd605f-5e3d-4b67-dc9d-4ba9689e10d5"
       },
       "source": [
         "from google.colab import drive\n",
@@ -116,7 +105,7 @@
         "import pandas as pd\n",
         "import numpy as np\n"
       ],
-      "execution_count": 38,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,13 +148,13 @@
           "height": 206
         },
         "id": "5c_LyDgSFtq_",
-        "outputId": "37a6ef76-86ff-4053-a80c-f3f92c217c2e"
+        "outputId": "95bb3273-cf8a-4f90-e8ba-fe9c62b694de"
       },
       "source": [
         "air_visit = pd.read_csv('data/air_visit_data.csv')\n",
         "air_visit.head()"
       ],
-      "execution_count": 39,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 2
         }
       ]
     },
@@ -264,7 +253,7 @@
           "height": 206
         },
         "id": "MTzbYJMODmoe",
-        "outputId": "f826ef70-38d8-4b6c-f079-d8beb77c2087"
+        "outputId": "6b02f985-c5e1-4403-fed7-1240ddb1de6c"
       },
       "source": [
         "air_visit.index = pd.to_datetime(air_visit['visit_date'])\n",
@@ -272,7 +261,7 @@
         "air_visit.replace(0, np.nan, inplace=True)\n",
         "air_visit.head()"
       ],
-      "execution_count": 40,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +335,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 3
         }
       ]
     },
@@ -367,7 +356,7 @@
           "height": 206
         },
         "id": "fZsToEdK79XH",
-        "outputId": "41ac2baa-8543-4d39-d531-364372d9d475"
+        "outputId": "dfaaa2db-c0e7-42d5-d25e-d93328fb5eeb"
       },
       "source": [
         "air_visit['visit_date'] = air_visit['visit_date'].dt.strftime('%Y-%m-%d')\n",
@@ -376,7 +365,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 41,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +445,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 4
         }
       ]
     },
@@ -481,13 +470,13 @@
           "height": 206
         },
         "id": "BDhzZKcMHSnQ",
-        "outputId": "3f5f270e-0612-4b74-a40d-a7a54bdf0f7b"
+        "outputId": "6ed8e1c4-ea5b-486f-e26e-7e0f754a5d13"
       },
       "source": [
         "date_info = pd.read_csv('data/date_info.csv')\n",
         "date_info.head()"
       ],
-      "execution_count": 42,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +550,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 5
         }
       ]
     },
@@ -573,7 +562,7 @@
           "height": 206
         },
         "id": "7sbq0v6fC8Ik",
-        "outputId": "e1e2b69d-571f-4252-eba5-756d3c247fd6"
+        "outputId": "a7d72f1d-3e73-4d7d-b5c7-d739e20c67ed"
       },
       "source": [
         "date_info.rename(columns={'holiday_flg': 'is_holiday', 'calendar_date': 'visit_date'}, inplace=True)\n",
@@ -582,7 +571,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 43,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +657,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 6
         }
       ]
     },
@@ -692,14 +681,14 @@
           "height": 206
         },
         "id": "PtwFI0su1qga",
-        "outputId": "46dd6417-d85b-4f47-aa3c-bee9c5b8cfca"
+        "outputId": "3da3b9b2-d8a4-490e-c09e-f80cc3061a27"
       },
       "source": [
         "air_store_info = pd.read_csv('data/air_store_info.csv')\n",
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 44,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +776,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 7
         }
       ]
     },
@@ -799,14 +788,14 @@
           "height": 399
         },
         "id": "0a4rVeGV0bEb",
-        "outputId": "4319b3d6-d66b-4bdb-85e3-b6e5888a3e2b"
+        "outputId": "e0427e35-654f-4001-db30-c336596975ee"
       },
       "source": [
         "air_store_info = pd.read_csv('data/air_store_info_with_nearest_active_station.csv')\n",
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 45,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -936,7 +925,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 8
         }
       ]
     },
@@ -964,7 +953,7 @@
           "height": 206
         },
         "id": "MJuuUg330bEc",
-        "outputId": "5c744b18-a713-473a-9305-66dd29ea0b7b"
+        "outputId": "3e6f3ad6-5fbb-46e1-fabe-2a0ffdeb34c5"
       },
       "source": [
         "submission = pd.read_csv('data/sample_submission.csv')\n",
@@ -976,7 +965,7 @@
         "\n",
         "submission.head()"
       ],
-      "execution_count": 46,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,7 +1059,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 9
         }
       ]
     },
@@ -1082,13 +1071,13 @@
           "height": 206
         },
         "id": "IczInjSa2wSc",
-        "outputId": "6c9c1652-faab-4e67-c25c-351a4a63450c"
+        "outputId": "82c87875-1004-4352-c691-50bcc5b69d96"
       },
       "source": [
         "data = pd.concat((air_visit, submission.drop('id', axis='columns')))\n",
         "data.head()"
       ],
-      "execution_count": 47,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1180,7 +1169,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 10
         }
       ]
     },
@@ -1190,7 +1179,8 @@
         "id": "pYZzD_Pdz-tq"
       },
       "source": [
-        "# 4.5 Merge dataset\n"
+        "---\n",
+        "## 4.5 Merge dataset\n"
       ]
     },
     {
@@ -1210,7 +1200,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 399
         },
-        "outputId": "a1a85f67-b610-4c4d-c682-36d816651378"
+        "outputId": "1631a986-5552-4cf0-bbb3-467d71471598"
       },
       "source": [
         "data = pd.concat((air_visit, submission.drop('id', axis='columns')))\n",
@@ -1221,7 +1211,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 48,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1405,7 +1395,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 11
         }
       ]
     },
@@ -1428,7 +1418,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 399
         },
-        "outputId": "a8b99f95-cd11-4305-a633-9e9e05b1a134"
+        "outputId": "07323d68-de7c-4290-d689-f17db08ec6b3"
       },
       "source": [
         "import glob\n",
@@ -1446,7 +1436,7 @@
         "\n",
         "weather.head()"
       ],
-      "execution_count": 49,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1600,7 +1590,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 12
         }
       ]
     },
@@ -1627,12 +1617,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BHmR4NCXVEGe",
-        "outputId": "6a413d61-ead4-40e1-f75b-58697df57fd6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "BHmR4NCXVEGe",
+        "outputId": "0f8772c6-eeed-4384-b577-542ef86172a5"
       },
       "source": [
         "means = weather.groupby('visit_date')[['avg_temperature', 'precipitation']].mean().reset_index()\n",
@@ -1643,7 +1633,7 @@
         "\n",
         "weather[['visit_date', 'avg_temperature', 'precipitation']].head()"
       ],
-      "execution_count": 50,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1717,7 +1707,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 13
         }
       ]
     },
@@ -1733,21 +1723,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0mqmkYrsVbh1",
-        "outputId": "a58cdc2c-a34e-424f-a572-52cbc64bfc94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 431
-        }
+        },
+        "id": "0mqmkYrsVbh1",
+        "outputId": "b81a7463-df3c-4205-c7f6-416148436db1"
       },
       "source": [
         "data['visit_date'] = pd.to_datetime(data['visit_date'])\n",
-        "#data.index = data['visit_date']\n",
+        "data.index = data['visit_date']\n",
         "#data.sort_values(['air_store_id', 'visit_date'], inplace=True)\n",
         "\n",
         "data.head()"
       ],
-      "execution_count": 58,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1844,14 +1834,14 @@
               "      <td>0.415906</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2017-02-14</th>\n",
+              "      <th>2016-07-02</th>\n",
               "      <td>air_00a91d42b08b08d9</td>\n",
-              "      <td>2017-02-14</td>\n",
-              "      <td>41.0</td>\n",
+              "      <td>2016-07-02</td>\n",
+              "      <td>9.0</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>Tuesday</td>\n",
+              "      <td>Saturday</td>\n",
               "      <td>0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
@@ -1868,10 +1858,34 @@
               "      <td>0.415906</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2017-02-13</th>\n",
+              "      <th>2016-07-03</th>\n",
               "      <td>air_00a91d42b08b08d9</td>\n",
-              "      <td>2017-02-13</td>\n",
-              "      <td>24.0</td>\n",
+              "      <td>2016-07-03</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>True</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Sunday</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Italian/French</td>\n",
+              "      <td>Tōkyō-to Chiyoda-ku Kudanminami</td>\n",
+              "      <td>35.694003</td>\n",
+              "      <td>139.753595</td>\n",
+              "      <td>\"35.6940027\"</td>\n",
+              "      <td>\"139.7535951\"</td>\n",
+              "      <td>tokyo__tokyo-kana__tonokyo</td>\n",
+              "      <td>35.691667</td>\n",
+              "      <td>139.75</td>\n",
+              "      <td>0.416011</td>\n",
+              "      <td>0.415906</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-07-04</th>\n",
+              "      <td>air_00a91d42b08b08d9</td>\n",
+              "      <td>2016-07-04</td>\n",
+              "      <td>20.0</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>NaN</td>\n",
@@ -1892,39 +1906,15 @@
               "      <td>0.415906</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2017-02-12</th>\n",
+              "      <th>2016-07-05</th>\n",
               "      <td>air_00a91d42b08b08d9</td>\n",
-              "      <td>2017-02-12</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>True</td>\n",
+              "      <td>2016-07-05</td>\n",
+              "      <td>25.0</td>\n",
+              "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>Sunday</td>\n",
+              "      <td>Tuesday</td>\n",
               "      <td>0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>Italian/French</td>\n",
-              "      <td>Tōkyō-to Chiyoda-ku Kudanminami</td>\n",
-              "      <td>35.694003</td>\n",
-              "      <td>139.753595</td>\n",
-              "      <td>\"35.6940027\"</td>\n",
-              "      <td>\"139.7535951\"</td>\n",
-              "      <td>tokyo__tokyo-kana__tonokyo</td>\n",
-              "      <td>35.691667</td>\n",
-              "      <td>139.75</td>\n",
-              "      <td>0.416011</td>\n",
-              "      <td>0.415906</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2017-02-11</th>\n",
-              "      <td>air_00a91d42b08b08d9</td>\n",
-              "      <td>2017-02-11</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Saturday</td>\n",
-              "      <td>1</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>Italian/French</td>\n",
@@ -1947,16 +1937,16 @@
               "                    air_store_id  ... station_great_circle\n",
               "visit_date                        ...                     \n",
               "2016-07-01  air_00a91d42b08b08d9  ...             0.415906\n",
-              "2017-02-14  air_00a91d42b08b08d9  ...             0.415906\n",
-              "2017-02-13  air_00a91d42b08b08d9  ...             0.415906\n",
-              "2017-02-12  air_00a91d42b08b08d9  ...             0.415906\n",
-              "2017-02-11  air_00a91d42b08b08d9  ...             0.415906\n",
+              "2016-07-02  air_00a91d42b08b08d9  ...             0.415906\n",
+              "2016-07-03  air_00a91d42b08b08d9  ...             0.415906\n",
+              "2016-07-04  air_00a91d42b08b08d9  ...             0.415906\n",
+              "2016-07-05  air_00a91d42b08b08d9  ...             0.415906\n",
               "\n",
               "[5 rows x 21 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 15
         }
       ]
     },
@@ -1968,7 +1958,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     }
   ]
