upload final DataFrame

--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Bản sao của Group12_Notebook.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -26,6 +27,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pdthuc/Project-Applied_Data_Science/blob/main/Group12_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -105,7 +116,7 @@
         "import pandas as pd\n",
         "import numpy as np\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +165,7 @@
         "air_visit = pd.read_csv('data/air_visit_data.csv')\n",
         "air_visit.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,7 +272,7 @@
         "air_visit.replace(0, np.nan, inplace=True)\n",
         "air_visit.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +376,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +487,7 @@
         "date_info = pd.read_csv('data/date_info.csv')\n",
         "date_info.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +582,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,7 +699,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +806,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -965,7 +976,7 @@
         "\n",
         "submission.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1077,7 +1088,7 @@
         "data = pd.concat((air_visit, submission.drop('id', axis='columns')))\n",
         "data.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1211,7 +1222,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1436,7 +1447,7 @@
         "\n",
         "weather.head()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1633,7 +1644,7 @@
         "\n",
         "weather[['visit_date', 'avg_temperature', 'precipitation']].head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1737,7 +1748,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1958,7 +1969,7 @@
       "source": [
         ""
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     }
   ]
