--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -117,13 +117,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RS_HDZ2p9FT-",
-        "outputId": "040336d6-a280-43c7-cc30-0037988c6ef0"
+        "outputId": "243b8005-8803-43e3-fc47-15bbb5186bf0"
       },
       "source": [
         "from google.colab import drive\n",
         "import os\n",
         "drive.mount('/content/drive')\n",
-        "os.chdir(\"/content/drive/My Drive/Colab Notebooks/KHDL\")\n",
+        "os.chdir(\"/content/drive/My Drive/Colab Notebooks/KHDL/data\")\n",
         "!ls\n",
         "\n",
         "\n",
@@ -138,7 +138,22 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "data  Group12_Notebook.ipynb\n"
+            "1-1-16_5-31-17_Weather\n",
+            "air_reserve.csv\n",
+            "air_station_distances.csv\n",
+            "air_store_info.csv\n",
+            "air_store_info_with_nearest_active_station.csv\n",
+            "air_visit_data.csv\n",
+            "date_info.csv\n",
+            "feature_manifest.csv\n",
+            "hpg_reserve.csv\n",
+            "hpg_station_distances.csv\n",
+            "hpg_store_info.csv\n",
+            "hpg_store_info_with_nearest_active_station.csv\n",
+            "nearby_active_stations.csv\n",
+            "sample_submission.csv\n",
+            "store_id_relation.csv\n",
+            "weather_stations.csv\n"
           ]
         }
       ]
@@ -188,7 +203,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +311,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +415,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +535,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +630,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +755,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -847,7 +862,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,7 +1040,7 @@
         "\n",
         "submission.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1138,7 +1153,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1271,7 +1286,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1507,7 +1522,7 @@
         "\n",
         "weather.head()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1704,7 +1719,7 @@
         "\n",
         "weather[['visit_date', 'avg_temperature', 'precipitation']].head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1818,7 +1833,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
