add section Preprocessing -v1

--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -131,7 +131,7 @@
         "import numpy as np\n",
         "import glob\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +300,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -529,7 +529,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +624,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +751,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
         "\n",
         "submission.head()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1160,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1293,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1536,16 +1536,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "QbRtBMXY-SJj",
-        "outputId": "0564bca9-5271-42ee-de68-6449ba8096f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "0564bca9-5271-42ee-de68-6449ba8096f1"
       },
       "source": [
         "weather.head(20)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2093,7 +2093,7 @@
         "\n",
         "weather[['visit_date', 'avg_temperature', 'precipitation']].head()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2207,7 +2207,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2428,6 +2428,54 @@
       "source": [
         "# 5. TIỀN XỬ LÝ DỮ LIỆU\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Za8QeVFZqoet"
+      },
+      "source": [
+        "##5.1 Lượt bỏ outliers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-EFnY6mdsSbA"
+      },
+      "source": [
+        "Ta thực hiện lượt bỏ bớt các phần tử có giá trị lớn nhưng không thể hiện đúng phân bố của dữ liệu gây nhiễu cho quá trình huấn luyện(outlier).\n",
+        "\n",
+        "\n",
+        "Ví dụ: Số lượt truy cập vào dịp năm mới rõ ràng không đại diện cho các thời điểm còn lại trong năm."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6zqDHUmDsJxw"
+      },
+      "source": [
+        "def find_outliers(series):\n",
+        "    return (series - series.mean()) > 2.4 * series.std()\n",
+        "\n",
+        "\n",
+        "def cap_values(series):\n",
+        "    outliers = find_outliers(series)\n",
+        "    max_val = series[~outliers].max()\n",
+        "    series[outliers] = max_val\n",
+        "    return series\n",
+        "\n",
+        "\n",
+        "stores = data.groupby('air_store_id')\n",
+        "data['is_outlier'] = stores.apply(lambda g: find_outliers(g['visitors'])).values\n",
+        "data['visitors_capped'] = stores.apply(lambda g: cap_values(g['visitors'])).values\n",
+        "data['visitors_capped_log1p'] = np.log1p(data['visitors_capped'])\n",
+        "\n",
+        "data.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
