finish Preprocessing section

--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -2405,18 +2405,24 @@
         "Ta thực hiện lượt bỏ bớt các phần tử có giá trị lớn nhưng không thể hiện đúng phân bố của dữ liệu gây nhiễu cho quá trình huấn luyện(outlier).\n",
         "\n",
         "\n",
-        "Ví dụ: Số lượt truy cập vào dịp năm mới rõ ràng không đại diện cho các thời điểm còn lại trong năm."
+        "Ví dụ: Số lượt truy cập vào dịp năm mới rõ ràng không đại diện cho các thời điểm còn lại trong năm.\n",
+        "\n",
+        "Ta chọn hệ số Z là 2.4 để có khoản tin cậy khoản 97% và lượt bỏ khoản 3% số lượng giá trị outlier. Bạn có thể tham khảo tại [đây](https://www.mathsisfun.com/data/confidence-interval-calculator.html) để biết thêm về hệ số Z.\n",
+        "\n",
+        "Những dòng có giá trị outlier sẻ được thay thế bằng max của những giá trị trong khoản tin cậy.\n",
+        "\n",
+        "Tiếp theo ta tính log1p để transform lại dữ liệu, giúp dữ liệu phân bố tốt hơn, không bị lệch phải do các giá trị outlier chưa được lượt bỏ hết."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6zqDHUmDsJxw",
-        "outputId": "aeedcbed-11be-4877-a108-1aeb25d3b1f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 431
-        }
+        },
+        "outputId": "aeedcbed-11be-4877-a108-1aeb25d3b1f1"
       },
       "source": [
         "def find_outliers(series):\n",
@@ -2716,18 +2722,20 @@
         "id": "SKYG93YX9VBr"
       },
       "source": [
-        "a"
+        "Ta tính [EWM](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.ewm.html) để tăng trọng số cho số lượng khách hàng của ngày hiện tại dựa trên những ngày trước đó, điều này nhằm mục đích nằm bắt được xu hướng của khách hàng.\n",
+        "\n",
+        "Để tính EWM cần biết tham số alpha. Ở đây ta dùng thư viện [optimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.differential_evolution.html) để tìm alpha tốt nhất cho giá trị EWM. Ta dùng độ lỗi mean square error để làm giá trị trả về cho hàm cần tối ưu. Ở đây ta cần tìm min của hàm f."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ihgt20CO9WmV",
-        "outputId": "dcd66813-f6d0-4502-eb24-d20ae1eda0b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 431
-        }
+        },
+        "id": "ihgt20CO9WmV",
+        "outputId": "dcd66813-f6d0-4502-eb24-d20ae1eda0b5"
       },
       "source": [
         "from scipy import optimize\n",
@@ -3051,12 +3059,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y-daFYXYDKqS",
-        "outputId": "24dc3306-73ab-41c4-d896-87760679f64d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
-        }
+        },
+        "id": "y-daFYXYDKqS",
+        "outputId": "24dc3306-73ab-41c4-d896-87760679f64d"
       },
       "source": [
         "def extract_precedent_statistics(df, on, group_by):\n",
@@ -3687,6 +3695,26 @@
           "execution_count": 26
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B7PEsInETaHu"
+      },
+      "source": [
+        "## 5.5 Mã hoá dữ liệu"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ARNEZWs0UBmn"
+      },
+      "source": [
+        "data = pd.get_dummies(data, columns=['day_of_week', 'air_genre_name'])"
+      ],
+      "execution_count": 27,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
