--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -131,7 +131,7 @@
         "import numpy as np\n",
         "import glob\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +300,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -529,7 +529,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +624,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +751,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
         "\n",
         "submission.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1160,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1293,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1529,7 +1529,7 @@
         "weather.rename(columns={'calendar_date': 'visit_date'}, inplace=True)\n",
         "\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1545,7 +1545,7 @@
       "source": [
         "weather.head(20)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2051,7 +2051,7 @@
         "\n",
         "weather[['visit_date', 'avg_temperature', 'precipitation']].head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2165,7 +2165,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2409,6 +2409,25 @@
         "\n",
         "Ta chọn hệ số Z là 2.4 để có khoản tin cậy khoản 97% và lượt bỏ khoản 3% số lượng giá trị outlier. Bạn có thể tham khảo tại [đây](https://www.mathsisfun.com/data/confidence-interval-calculator.html) để biết thêm về hệ số Z.\n",
         "\n",
+        "\n",
+        "<div align=\"center\">  <font size=\"5\"> $\\overline{x} \\pm Z \\frac{s}{\\sqrt(n)}$ </font> </div>\n",
+        "\n",
+        "Trong đó: \n",
+        "- **$\\overline{x}$**: là mean.\n",
+        "- **$Z$** là hệ số.\n",
+        "- **$s$** là là độ lệch chuẩn.\n",
+        "- **$n$** là số lượng mẫu quan sát.\n",
+        "\n",
+        "|   | $Z$ |\n",
+        "|---|---|\n",
+        "| 80% | 1.282|\n",
+        "| 85% | 1.440 | \n",
+        "| 90% | 1.645   |\n",
+        "| 95% | 1.960  | \n",
+        "| 95% | 2.576 |\n",
+        "| 99.5% | 2.576 |\n",
+        "| 99.9% | 3.291 |\n",
+        "\n",
         "Những dòng có giá trị outlier sẻ được thay thế bằng max của những giá trị trong khoản tin cậy.\n",
         "\n",
         "Tiếp theo ta tính log1p để transform lại dữ liệu, giúp dữ liệu phân bố tốt hơn, không bị lệch phải do các giá trị outlier chưa được lượt bỏ hết."
@@ -2443,7 +2462,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2683,7 +2702,7 @@
         "id": "V_LkwJHb7FaX"
       },
       "source": [
-        "## 5.2 Trích xuất các đặc trưng ngày trong tuần(day_of_week), ngày trong tháng(day_of_month)."
+        "## 5.2 Trích xuất thêm các đặc trưng."
       ]
     },
     {
@@ -2692,7 +2711,11 @@
         "id": "LEbV2kfH7sSw"
       },
       "source": [
-        "Những đặt trưng này có thể được coi là đại diện cho thời điểm mọi người được trả tiền trong tháng, giả sử họ được trả tiền hàng tháng."
+        " Các đặc trưng cần thêm:\n",
+        " - Ngày cuối tuần(`is_weekend`)\n",
+        " - Ngày trong tháng(`day_of_month`)\n",
+        "\n",
+        "Những đặt trưng này có thể được coi là đại diện cho thời điểm mọi người được trả tiền trong tháng, giả sử họ được trả tiền hàng tháng hay thường hay ăn chơi dịp cuối tuần."
       ]
     },
     {
@@ -2704,7 +2727,7 @@
         "data['is_weekend'] = data['day_of_week'].isin(['Saturday', 'Sunday']).astype(int)\n",
         "data['day_of_month'] = data['visit_date'].dt.day"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2713,7 +2736,7 @@
         "id": "Px09LfO_8MuS"
       },
       "source": [
-        "## 5.3 Tính trọng số theo cấp số nhân Exponentially weighted means (EWM) cho số lượng khách hàng."
+        "## 5.3 Tính trọng số theo cấp số nhân cho số lượng khách hàng."
       ]
     },
     {
@@ -2722,9 +2745,11 @@
         "id": "SKYG93YX9VBr"
       },
       "source": [
-        "Ta tính [EWM](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.ewm.html) để tăng trọng số cho số lượng khách hàng của ngày hiện tại dựa trên những ngày trước đó, điều này nhằm mục đích nằm bắt được xu hướng của khách hàng.\n",
+        "- Trọng số theo cấp số nhân - Exponentially weighted means (EWM) \n",
         "\n",
-        "Để tính EWM cần biết tham số alpha. Ở đây ta dùng thư viện [optimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.differential_evolution.html) để tìm alpha tốt nhất cho giá trị EWM. Ta dùng độ lỗi mean square error để làm giá trị trả về cho hàm cần tối ưu. Ở đây ta cần tìm min của hàm f."
+        "- Ta tính [EWM](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.ewm.html) để tăng trọng số cho số lượng khách hàng của ngày hiện tại dựa trên những ngày trước đó, điều này nhằm mục đích nằm bắt được xu hướng của khách hàng.\n",
+        "\n",
+        "- Để tính EWM cần biết tham số alpha. Ở đây ta dùng thư viện [optimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.differential_evolution.html) để tìm **alpha** tốt nhất cho giá trị EWM. Ta dùng độ lỗi **mean square error** để làm giá trị trả về cho hàm cần tối ưu. Ở đây ta cần tìm `min` của hàm f."
       ]
     },
     {
@@ -2771,7 +2796,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3053,7 +3078,23 @@
         "id": "OB1DbSU6CQYx"
       },
       "source": [
-        "## 5.4 Tính các đặc trưng như trung bình(mean), trung vị(median), độ lệch chuẩn(standard deviation), số lượng giá trị, tối thiểu(min), tối đa(max) và EWM."
+        "## 5.4 Tính toán các đặc trưng."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M_yyHIO684OX"
+      },
+      "source": [
+        "Tính các đặc trưng như:\n",
+        "- Trung bình (mean)\n",
+        "- Trung vị (median)\n",
+        "- Độ lệch chuẩn (standard deviation)\n",
+        "- Số lượng giá trị\n",
+        "- Tối thiểu (min)\n",
+        "- Tối đa (max)\n",
+        "- Giá trị EWM."
       ]
     },
     {
@@ -3147,7 +3188,7 @@
         "\n",
         "data.sort_values(['air_store_id', 'visit_date']).head()\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3713,7 +3754,7 @@
       "source": [
         "data = pd.get_dummies(data, columns=['day_of_week', 'air_genre_name'])"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
