--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -2410,15 +2410,15 @@
         "Ta chọn hệ số Z là 2.4 để có khoản tin cậy khoản 97% và lượt bỏ khoản 3% số lượng giá trị outlier. Bạn có thể tham khảo tại [đây](https://www.mathsisfun.com/data/confidence-interval-calculator.html) để biết thêm về hệ số Z.\n",
         "\n",
         "\n",
-        "<div align=\"center\">  <font size=\"5\"> $$ \\overline{x} \\pm Z \\frac{s}{\\sqrt(n)} $$ </font> </div>\n",
+        "<div align=\"center\">   <font size=\"5\"> $$  \\overline{x} \\pm Z \\frac{s}{\\sqrt(n)} $$ </font> </div>\n",
         "\n",
         "Trong đó: \n",
-        "- **$ \\overline{x} $**: là mean.\n",
-        "- **$Z$** là hệ số.\n",
-        "- **$s$** là là độ lệch chuẩn.\n",
-        "- **$n$** là số lượng mẫu quan sát.\n",
+        "- **$$\\overline{x}$$**: là mean.\n",
+        "- **$$ Z $$** là hệ số.\n",
+        "- **$$ s $$** là là độ lệch chuẩn.\n",
+        "- **$$ n $$** là số lượng mẫu quan sát.\n",
         "\n",
-        "|   | $Z$ |\n",
+        "|   | $$ Z $$ |\n",
         "|---|---|\n",
         "| 80% | 1.282|\n",
         "| 85% | 1.440 | \n",
